src/pages/Stretch/styles.scss
@import '../../styles/vars';

.Stretch {

    & .stretch-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: 1fr;
        grid-column-gap: 27px;
        grid-row-gap: 27px;
        margin: auto;
        margin-top: 2em;
        width: 70%;
 
        text-align: center;
        font-size: 2rem;
        font-weight: 700;

        & img {
            width: 500px;
            height: 500px;
            border-radius: 10%;
            object-fit: cover;

        }

        & .stretch-infos {
            text-align: left;

            & h1 {
                margin-bottom: -0.2em;
            }
            & p {
                font-size: 1.1rem;
                font-weight: 400;
                font-style: italic;
            }
        }
    }
}
.stretch-image-container{
    position: relative;
    width: 500px;
    height: 500px;
}
.fav-icon {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 10%;
    left: 0;
    margin-left: 1em;
    font-size: 1.8rem;
    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 1));
    transition: color 300ms ease;
    cursor: pointer;
    color: #7867B1;

}
.icon-box{
    width: 15%;
    display: flex;
    margin-top: 30px;
    justify-content: space-between;
}

.infos-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}

